--- a/package.json
+++ b/package.json
@@ -16,9 +16,9 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "run": "node ./src/Server/app.tsx",
+    "run": "node ./bin/dist/app.js",
     "start": "react-scripts start",
-    "build": "react-scripts build",
+    "build": "npx tsc",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
@@ -41,6 +41,7 @@
     ]
   },
   "devDependencies": {
-    "@types/material-ui": "^0.21.12"
+    "@types/material-ui": "^0.21.12",
+    "@types/node": "^20.2.5"
   }
 }
