--- a/app/package.json
+++ b/app/package.json
@@ -15,6 +15,7 @@
     "@types/node": "^16.18.24",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.10",
+    "axios": "^1.4.0",
     "express": "^4.18.2",
     "konva": "^8.4.2",
     "react": "^18.2.0",
