--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "@types/express": "^4.17.17",
+    "body-parser": "^1.20.2",
     "express": "^4.18.2",
     "mongodb": "5.2",
     "react": "^18.2.0",
